istioctl/cmd/testdata/authz/converter/one-rule-all-services.golden.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: my-root-namespace
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-wildcard-rule0-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
    - source:
        namespaces:
        - default
        principals:
        - Coldplay
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels: {}
---
